manifests/manifests_app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-postgres
  labels:
    app: app-postgres
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-postgres
  template:
    metadata:
      labels:
        app: app-postgres
    spec:
      containers:
      - name: app-postgres
        image: rosignol/gin_users_hw:1.0.8
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          containerPort: 8000
        livenessProbe:
          httpGet:
            path: /api/healthchecker
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
