manifests/manifests_app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-postgres
  labels:
    app: app-postgres
spec:
  type: NodePort
  selector:
    app: app-postgres
  ports:
    - port: 80
      targetPort: 8000
      name: metrics
